[Payments] Use layers in card unmask dialog.

Both the main contents of the dialog and the progress overlay need to
use layers to be able to mask the input dropdowns (see bug).

Also, remove FadeOutView.

Bug: 786090
Test: visual
Change-Id: I0c848547b74cd3af21e19f275b012aa43688170b